--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ Created by pixpalette.com - online design magazine -->
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <script src="https://uwoaptee.com/act/files/tag.min.js?z=2989450" data-cfasync="false" async></script>
 </head>
 
 <body>
@@ -741,8 +742,7 @@ Created by pixpalette.com - online design magazine -->
                                     dunia elektronika dan totalitas menekuni dunia IT, termasuk Programming, Blogging &
                                     SEO.</h4>
                                 <br>
-                                <h4>Kematangan skill saya terbangun atas dasar wawasan berpikir kritis di dunia akademis
-                                    dan dunia industri.</h4>
+                                <h4>Kematangan skill saya terbangun atas dasar wawasan berpikir kritis di dunia industri & akademis.</h4>
                                 <br>
                                 <h4>
                                     <div class="alert alert-success" role="alert">
