--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ Created by pixpalette.com - online design magazine -->
                                     data-toggle="tab">Pendidikan</a></li>
                             <li role="presentation"><a href="#termCondition" aria-controls="termCondition" role="tab"
                                     data-toggle="tab">Tentangku</a></li>
-                            <li role="presentation"><a href="https://bundet.com/" target="_blank">Blog</a></li>
+                            <li role="presentation"><a href="https://gaexe.com/" target="_blank">Blog</a></li>
                         </ul>
 
                         <!-- Content -->
