--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ Created by pixpalette.com - online design magazine -->
             <div class="col-sm-5 left-wrapper">
                 <div class="event-banner-wrapper">
                     <div class="logo">
-                        <h1>Mobile Developer</h1>
+                        <h1>Mobile & TV App Dev</h1>
                     </div>
                     <div class="gitstar" style="float: right;">
                         <a class="paybutton" to="ecash:qrrn6yvaah3p4jjm8uwet935hdh7apufjc6m9w8prz" hover-text="100 XEC"
