--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ Created by pixpalette.com - online design magazine -->
                     </div>
                     <div class="gitstar" style="float: right;">
                         <a class="paybutton" to="ecash:qrrn6yvaah3p4jjm8uwet935hdh7apufjc6m9w8prz" hover-text="100 XEC"
-                            amount=100 random-satoshis="false" text="buy me coffee candy"></a>
+                            amount=100 random-satoshis="false" text="buy me coffee candy" editable="true"></a>
                     </div>
 
                     <h2>Wawan Chahyo Nugroho
